--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,59 @@
 @import 'bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+// FONT CLASS
+.title-font{
+    font-family: "Poppins", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2.5rem;
+}
+.subtitle-font{
+    font-family: "Lato", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5rem;
+}
+.text-font{
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+}
+.button-font{
+    font-family: "Montserrat", serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 1.125rem;
+}
+
+// COLOR CLASS
+.title-color{
+    color: #f2cf4a; //giallo acceso
+    text-shadow: 3px 3px 3px #e24b40; //rosso brillante
+}
+.subtitle-color{
+    color: #d1b83f; //giallo scuro
+}
+.text-color{
+    color: #4f4f4f; //grigio scuro
+} 
+.button-bgcolor{
+    background-color: #e24b40; //rosso brillante
+    &:hover{
+        background-color: #c03833; //rosso scuro
+    }
+}
+.general-bgcolor{
+    background-color: #faf7f2; //bianco sporco
+}
+.section-bgcolor{
+    background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
+
+}
