--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,10 @@
 @import 'bootstrap/scss/bootstrap';
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
+
 
 *{
     margin: 0;
@@ -57,3 +62,14 @@
     background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
 
 }
+
+// RIMUOVERE FRECCETTE INPUT NUMBER
+.input-number[type=number]::-webkit-inner-spin-button,
+.input-number[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.input-number[type=number] {
+    -moz-appearance: textfield;
+}
+
