--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -69,6 +69,9 @@ h2.title-color{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
+// .nav-bgcolor{
+//     background-color: rgba(0, 0, 0, 0.8);
+// }
 
 // RIMUOVERE FRECCETTE INPUT NUMBER
 .input-number[type=number]::-webkit-inner-spin-button,
@@ -82,10 +85,10 @@ h2.title-color{
 
 // INDEX and SHOW PAGE
 .width-index{
-    width: 45%;
+    width: 40%;
 }
 .width-show{
-    width: 55%;
+    width: 60%;
 }
 label{
     font-family: "Poppins", serif;
