--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -69,6 +69,11 @@ h2.title-color{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
+.little-section-bgcolor{
+    background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+}
 // .nav-bgcolor{
 //     background-color: rgba(0, 0, 0, 0.8);
 // }
@@ -90,7 +95,7 @@ h2.title-color{
 .width-show{
     width: 60%;
 }
-label{
+.label-form{
     font-family: "Poppins", serif;
     font-weight: 400;
     font-style: normal;
@@ -98,33 +103,14 @@ label{
     color: #4f4f4f;
 }
 
-.border-filter-region, .border-filter-location, .border-filter-dress-code, .border-filter-date{
-    border-right: 0.5px solid rgba(128, 128, 128, 0.186);
-    background-color: transparent;
-    
-    
+.border-filter{
     &:hover{
-        background-color: #f7e4a18d;
-        border-radius: 10px;
+        background-color: #d1b93f3c;    
         border-right: 0px;
         border-left: 0px;
     }
     
 }
-.border-filter-price, .border-filter-location, .border-filter-dress-code, .border-filter-date{
-    border-left: 0.5px solid rgba(128, 128, 128, 0.186);
-    &:hover{
-        background-color: #d1b93f6e;
-        border-radius: 10px;
-        border-right: 0px;
-        border-left: 0px;
-    }
-}
-.border-filter-region:hover + .border-filter-location{
-    border-left: 0px !important;
-}
-
-
 .select-filter{
     background-color: transparent;
     border: 0;
@@ -132,4 +118,27 @@ label{
     background-image: none;
     padding: 8px 12px ;
     width: 100%;
+    color: grey;
+    font-size: 14px;
+    font-family: "Poppins", serif;
+}
+.select-filter:focus{
+    border: 0 !important; 
+    --tw-ring-color: transparent;   
+}
+
+.vertical-align{
+    vertical-align: middle;
+}
+.fa-magnifying-glass{
+    font-size: 30px;
+}
+.btn-search{
+    background-color: #e24b40; //rosso brillante
+    &:hover{
+        background-color: #c03833; //rosso scuro
+    }
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
