--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -69,6 +69,11 @@ h2.title-color{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
+.show-section-bgcolor{
+    background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
+    border-radius: 20px;
+    border: 3px solid #c03833;
+}
 .little-section-bgcolor{
     background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
     border-radius: 20px;
@@ -141,4 +146,49 @@ h2.title-color{
     color: white;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+}
+
+
+.card-img-event{
+    border-radius: 15px;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+}
+
+.truncate-multiline{
+    white-space: nowrap;      
+    overflow: hidden;          
+    text-overflow: ellipsis;  
+    display: block;           /* Assicura che funzioni correttamente */
+    width: 100%; 
+}
+
+.card-title{
+    font-family: "Poppins", serif;
+    font-style: normal;  
+    white-space: nowrap;      
+    overflow: hidden;          
+    text-overflow: ellipsis;  
+    display: block;           /* Assicura che funzioni correttamente */
+    width: 100%;
+    color: #4f4f4f;
+    font-weight: 800;
+}
+
+.text-price{
+    font-family: "Poppins", serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1rem;
+    color: #4f4f4f;
+}
+.text-region{
+    font-size: 15px;
+}
+.text-date{
+    font-size: 14px;
+}
+.position-fixed{
+    right: 0;
 }
