--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -394,3 +394,47 @@ h5.title-color{
     border-radius: 5px;
 
 }
+
+
+//profile show
+.profile-img{
+    width: 200px; 
+    height: 200px;
+    object-fit: cover; 
+    border-radius: 50%;
+    display: block;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+}
+
+.btn-edit-profile{
+    padding: 5px 10px;
+    color: white;
+    border-radius: 5px;
+}
+
+.link-edit-profile{
+    top: 5%;
+    right: 10%;
+}
+
+
+
+.sticky-row {
+   
+    position: sticky;
+    top: 0px;
+    z-index: 100;
+    background: white; /* Assicurati che sia visibile */
+    
+}
+
+.container, .row, .sticky-parent {
+    overflow: visible !important;
+}
+
+.sticky-parent {
+    height: auto !important;
+}
+.sticky-parent {
+    position: initial !important;
+}
