--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -108,10 +108,24 @@ h5.title-color{
 // INDEX and SHOW PAGE
 .width-index{
     width: 40%;
+    overflow-y: auto; /* Abilita lo scroll solo qui */
+    padding-right: 10px;
+    padding-bottom: 50px !important;
+    scroll-behavior: smooth;
+    
 }
 .width-show{
     width: 60%;
+    padding-left: 10px;
+    padding-bottom: 90px !important;
+    overflow-y: auto; /* Abilita lo scroll solo qui */
+
 }
+.width-show.active {
+    overflow-y: auto; /* Abilita lo scroll */
+    padding-bottom: 100px !important;
+}
+
 .label-form{
     font-family: "Poppins", serif;
     font-weight: 400;
@@ -423,7 +437,25 @@ h5.title-color{
 
 
 
+/* Colonna sinistra: Lista eventi */
+.events-list-container {
+    overflow-y: auto; /* Abilita lo scroll */
+    height: 100vh; /* Occupa l'intera altezza della viewport */
+    padding: 20px;
+   
+}
 
+/* Colonna destra: Dettagli evento */
+.details-container {
+    height: 100vh;
+    overflow: hidden; /* Disabilita lo scroll finché non viene selezionato un evento */
+    padding: 20px;
+}
+.details-container.active {
+    overflow-y: auto; /* Abilita lo scroll dopo la selezione */
+}
 
-
+.shadow-bottom{
+    box-shadow: 0px 2px 5px rgba(128, 128, 128, 0.088);
+}
 
