--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -55,6 +55,10 @@ h3.title-color{
     text-shadow: 2px 2px 0px #e24b40; //rosso brillante
 
 }
+h4.title-color{
+    text-shadow: 2px 2px 0px #e24b40; //rosso brillante
+
+}
 h5.title-color{
     text-shadow: 2px 2px 0px #e24b40; //rosso brillante
 
@@ -79,17 +83,17 @@ h5.title-color{
     background-color: #faf7f2; //bianco sporco
 }
 .section-bgcolor{
-    background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
+    background-color: #fff5d1; //giallo tenue 
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 .show-section-bgcolor{
-    background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
+    background-color: #fff5d1; //giallo tenue 
     border-radius: 20px;
     border: 3px solid #c03833;
 }
 .little-section-bgcolor{
-    background-color: #fff5d1; //giallo tenue // or #f4f4f4 (grigio chiaro)
+    background-color: #fff5d1; //giallo tenue 
     border-radius: 20px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
     transition: box-shadow 0.3s;
@@ -562,7 +566,7 @@ h5.title-color{
 
 
 .video-logo{
-    width: 70%;
+    width: 90%;
     aspect-ratio: 1 / 1;
 
     background: url("/public/img/symposion.gif") no-repeat center center ;
@@ -570,4 +574,27 @@ h5.title-color{
     transform: perspective(1000px) rotateY(-25deg); /* Aggiunge prospettiva e rotazione iniziale */
     
     border-radius: 20px;
+}
+
+.link-red{
+    color: #e24b40;
+}
+.fs-register-text{
+    font-size: 18px;
+}
+
+.gradient-bgcolor{
+    background: linear-gradient(to right, #e24b40, #f2cf4a);
+}
+
+.section-login-bgcolor{
+    background-color: #fff5d1; //giallo tenue 
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+    height: auto;
+}
+
+.header-z-index{
+    z-index: 4;
+    
 }
