--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -425,8 +425,8 @@ h5.title-color{
 
 //profile show
 .profile-img{
-    width: 200px; 
-    height: 200px;
+    width: 50%; 
+    aspect-ratio: 1 / 1;
     object-fit: cover; 
     border-radius: 50%;
     display: block;
@@ -597,4 +597,13 @@ h5.title-color{
 .header-z-index{
     z-index: 4;
     
+}
+
+.profile-img-show{
+    width: 15%; 
+    aspect-ratio: 1 / 1;
+    object-fit: cover; 
+    border-radius: 50%;
+    display: inline;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
