--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -607,3 +607,31 @@ h5.title-color{
     display: inline;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
+
+// modale
+.modal-dialog{
+    width: 40% !important;
+    max-width: none;
+}
+.modal-header{
+    border: 0 !important;
+}
+.modal-footer{
+    border: 0 !important;
+}
+.btn-close-modal{
+    color: white;
+    background-color: #4f4f4f;
+    padding: 6px 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.3s;
+    font-size: 18px;
+    &:hover{
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.375);
+        transition: box-shadow 0.3s;
+    }
+    
+}
+
+
