--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -283,13 +283,15 @@ h5.title-color{
     display: flex;
     gap: 10px;  
 }
-
 .img-primary {
+    width: 70%;
+    height: 350px;  
     flex: 4;    
 }
 
 .img-primary img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 15px;   
 }
@@ -304,14 +306,13 @@ h5.title-color{
     width: 100%;
     align-items: center;   
 }
-
 .img-secondary {
+    width: 100%;
    display: flex;
    justify-content: center;  
 }
 .img-secondary img {
     width: 85%;
-    height: auto;
     cursor: pointer;
     transition:  box-shadow 0.3s;
     border-radius: 15px ;
@@ -494,11 +495,19 @@ h5.title-color{
 }
 
 .img-primary-show {
-    flex: 2;    
+    width: 70%;       /* Larghezza fissa */
+    height: 500px;      /* Altezza fissa */
+    display: flex;      
+    align-items: center; 
+    justify-content: center; 
+    overflow: hidden;    /* Nasconde l'eventuale overflow */
 }
+
+
 
 .img-primary-show img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 15px;   
 }
@@ -516,11 +525,12 @@ h5.title-color{
 
 .img-secondary-show {
    display: flex;
+   width: 100%;
    justify-content: space-around;  
 }
 .img-secondary-show img {
     width: 70%;
-    height: auto;
+    
     cursor: pointer;
     transition:  box-shadow 0.3s;
     border-radius: 15px ;
@@ -643,3 +653,4 @@ h5.title-color{
     transition: box-shadow 0.3s;
 
 }
+// .img-primary-show
